--- a/pages/myOrder/myOrder.wxml
+++ b/pages/myOrder/myOrder.wxml
@@ -64,7 +64,7 @@
       </view>
       <view class='line'></view>
       <view class='center'>
-        <block wx:if='{{!item.preOrder || !item.preOrder.time}}'>
+        <block wx:if='{{!item.preOrder || !item.preOrder.time || item.orderStatus === -1}}'>
           <view class='name'>{{ item.preOrder ? (item.preOrder.time ? item.preOrder.mName : item.name) : item.name}}</view>
           <view class='subTitle' wx:if='{{(!item.preOrder || !item.preOrder.time) && item.merchCount > 1}}'>该订单包含 {{item.merchCount}} 个商品</view>
         </block>
@@ -76,7 +76,7 @@
           </view>
         </block>
       </view>
-      <view class='bottom' wx:if='{{!item.preOrder || !item.preOrder.time}}'>
+      <view class='bottom' wx:if='{{!item.preOrder || !item.preOrder.time || item.orderStatus === -1}}'>
         <view class='left'>
           <text wx:if='{{item.orderStatus === 7 || item.orderStatus === 6 || item.orderStatus === 1}}'>{{dateFr.getOrderStatusSubText(item.orderStatus)}}</text>
           <button data-order='{{item}}' catchtap='goToTheShoppingOrPay' wx:else>{{dateFr.getOrderStatusSubText(item.orderStatus)}}</button>
