--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -75,18 +75,18 @@
   </view>
   <view class='pickUp' wx:if='{{goodsItem.goodsItemBase.pickUpType}}'>
     <view class='tab-content'>
-      <view class='tab-text {{pickUpType === 1 ? "active" : ""}}' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 2}}' data-type='1'>
+      <view class='tab-text {{pickUpType === 1 ? "active" : ""}}' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 2}}' data-type='1' bindtap='handleUpdatePickUpType'>
         自取
         <image src='../../img/order/detail_icon_bmline.png'></image>
       </view>
-      <view class='tab-text {{pickUpType === 0 ? "active" : ""}}' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 1}}' data-type='0'>
+      <view class='tab-text {{pickUpType === 0 ? "active" : ""}}' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 1}}' data-type='0' bindtap='handleUpdatePickUpType'>
         邮寄
         <image src='../../img/order/detail_icon_bmline.png'></image>
       </view>
     </view>
-    <view class='self_taking' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 2}}'>
+    <view class='self_taking' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 2  && pickUpType === 1}}'>
       <block wx:for='{{goodsItem.goodsItemInfo.pickUpAddress}}' wx:key='{{index}}'>
-        <view class='radio_label'>
+        <view class='radio_label' data-item='{{item}}' bindtap='handleChangeSelfTaking'>
           <view class='label'>{{item}}</view>
           <view class='radio_border {{ self_taking === item ? "active" : ""}}'>
             <view class='radio'></view>
@@ -94,7 +94,7 @@
         </view>
       </block>
     </view>
-    <view class='mail single' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 1}}'>
+    <view class='mail single' wx:if='{{goodsItem.goodsItemBase.pickUpType !== 1 && pickUpType === 0}}'>
       <input value='{{mail}}' placeholder-class='phcolor' placeholder='详细地址' bindinput='handleChangeInputMail'></input>
     </view>
   </view>
