--- a/pages/progList/progList.wxml
+++ b/pages/progList/progList.wxml
@@ -23,12 +23,12 @@
             <image src='../../img/index/small_location.png'></image>
           </view>
           <view class='text'>
-            <text>{{item.goodsInfo.city}} · 距离市中心{{dateFr.getDistance(item.distance)}}公里</text>
+            <text>{{item.goodsInfo.city}} · 距离{{dateFr.getDistance(item.distance)}}{{item.distance ? '公里' : ''}}</text>
           </view>
         </view>
         <view class='info'>
           <view class='price'>
-            <text><text>￥</text>{{item.goodsInfo ? item.goodsInfo.avgPrice : ''}}</text>
+            <text class='{{item.goodsInfo.avgPrice ? "" : "ashy"}}'>{{item.goodsInfo.avgPrice ? item.goodsInfo.avgPrice : '暂无均价建议'}}</text>
           </view>
           <view class='star'>
             <block wx:for='{{5}}' wx:key='{{sIndex}}' wx:for-index='sIndex' wx:for-item='sItem'>
@@ -40,7 +40,7 @@
       </view>
     </block>
   </view>
-  <view class='empty' wx:if='{{!goods.length}}'>
+  <view class='empty' wx:if='{{!goods.length && !isFirst}}'>
     <view class='image_row'>
       <image src='../../img/common/empty_data.png'></image>
     </view>
