--- a/pages/progList/progList.wxss
+++ b/pages/progList/progList.wxss
@@ -134,6 +134,10 @@
   text-overflow:ellipsis;
 }
 
+.list_row>view .info .price .ashy{
+  color: #999;
+}
+
 .list_row>view .info .price text text{
   font-size: 20rpx;
 }
